# capas-inteligentes

./: .dockerignore  .gitignore  .mcp.json  .zenodo.json  CAPAS_passage_points.md  CAPAS_proof_carrying_claim_admissibility.md  CAPAS_zk_frontier.md  CARA2_BOUNDARY.md  CERTIFICATION.md  CITATION.cff  CLAUDE_CODE_PROJECT_HISTORY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  Dockerfile  GOVERNANCE.md  HANDOFF_CAPAS_CODEX.md  LIBRARY.md  LICENSE  MAINTAINERS.md  NOTICE  PRODUCT.md  README.md  ROADMAP.md  SECURITY-INSIGHTS.yml  SECURITY.md  TEST_POLICY.md  THIRD_PARTY_NOTICES.md  THREAT_MODEL.md  capas.py  capas_admissibility.py  capas_api.py  capas_audit.py  capas_braid.py  capas_bridge.py  capas_certstore.py  capas_circuits.py  capas_conformal.py  capas_conjecture.py  capas_consilience.py  (+39 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  claim-gate.yml  codeql.yml  conformance.yml  dco.yml  pages.yml  publish.yml  scorecard.yml
audits/: gold_trace_audit_criteria.md  gold_trace_audit_template.csv  summarize_gold_trace_audit.py
benchmarks/: analyze_magic_scaling.py  apple_silicon_thermal_routing.py  apple_silicon_thermal_routing_results.json  apple_silicon_thermal_routing_results_controlled.json  apple_silicon_thermal_routing_results_controlled_warm.json  attest_conformance.py  bench_bypass_clean.py  bench_claim_frequency.py  bench_cost_model_real.py  bench_decompose_magic_estimate.py  bench_memory_guard.py  bench_tensor_routing.py  cara1_acceptance.py  cara2_advantage.py  cara2_live_experiment.py  claim_frequency_results.json  conformance.py  decompose_magic_estimate_results.json  demo_admissibility.py  demo_braid.py  demo_bridge.py  demo_consilience.py  demo_discovery.py  demo_engine.py  demo_extract.py  demo_ezkl_proof.py  demo_falsify.py  demo_federated.py  demo_hierarchy.py  demo_intake.py  demo_integration.py  demo_invariants.py  demo_ledger.py  demo_macrophage.py  demo_mind.py  demo_multihop.py  demo_propose.py  demo_quantum_hw.py  demo_quantum_physics.py  demo_rcc.py  (+87 more)
benchmarks/gold_traces/: prov_export_report.json  trace_001.json  trace_001.prov.json  trace_002.json  trace_002.prov.json  trace_003.json  trace_003.prov.json  trace_004.json  trace_004.prov.json  trace_005.json  trace_005.prov.json  trace_006.json  trace_006.prov.json  (+64 more)
designlab/: .gitignore  _render.mjs  check.py  layout_lint.py  pixeldiff.py  render_check.py
docs/: BEATING_THE_BENCHMARK.md  BOX3_BOIL_THE_OCEAN_SOTA.md  CAPAS_ONE_PAGER_QMB100.md  CAPAS_TECHNICAL_NOTE.md  CLAIMS_REGISTRY.md  CLAIM_ADMISSIBILITY_CALCULUS.md  CLAIM_DRIFT_VALIDATION_PROTOCOL.md  CLAIM_UPGRADE_ROADMAP_10.md  CONVERGENCE_TO_EXPERIMENT.md  COVERAGE.md  CUSTOMER_READY_BRIEF.md  DAILY_SOTA_UPDATE.md  DEBUNK_10_MORE_CANONICAL_OVERCLAIMS.md  DEBUNK_5_CANONICAL_OVERCLAIMS.md  ELECTRONIC_VIBRATIONAL_PROTOCOL.md  ENTERPRISE_INTEGRATION_PACK.md  EVIDENCE_TYPE_SYSTEM.md  EXPERIMENTAL_EVIDENCE_AXIS.md  EXTERNAL_MVP_LAUNCH_PLAN.md  EXTERNAL_USER_VALIDATION_SOTA.md  EXTERNAL_USER_VALIDATION_TARGETS.md  FORMAL_BOUND_AXIS.md  GLOBAL_SOTA_MARKET_AUDIT.md  HYBRID_PIPELINE_POSITIONING.md  INPUT_HARDENING.md  INTEGRATION_MAP.md  LAUNCH_CRITERIA.md  MARKET_VALIDATION.md  METAMORPHIC_TESTING_POSITIONING.md  MOTOR_INGEST_LOG.md  OPEN_REFACTOR_BRIEF.md  OPTIMIZATION_BRIDGE.md  PAPER_INGESTION_CONNECTORS.md  PARTNER_DECK.md  PCM_SOTA_AUDIT.md  PILOT_ROI_BUSINESS_CASE.md  PREREGISTRATION_CROSS_DOMAIN_ADJUDICATION.md  PRODUCT_SCOPE_AND_DEBTS.md  PROJECT_DASHBOARD.md  PROVENANCE_REGISTRY_OPERATIONS.md  (+52 more)
examples/: argilla_capas_record.json  boost_your_llm.py  external_claim_accept.json  external_claim_batch.json  external_claim_fine_tune_ready.json  external_claim_invalid.json  external_claim_rewrite.json  external_reviewer_feedback_template.json  huggingface_dataset_capas_metadata.json  kingston_frequencies.py  kingston_live_audit.py  kingston_stress_test.py  kingston_xeb_analyze.py  kingston_xeb_submit.py  label_studio_capas_task.json  mini_literature_corpus.json  quantum_result_gate.py  standalone_pipeline_accept.json  standalone_pipeline_anchor_rewrite.json  standalone_pipeline_causal_corpus.json  standalone_pipeline_multisource.json  standalone_pipeline_pdf_source.json  standalone_pipeline_semantic_hold.json  standalone_pipeline_web_source.json  train_with_capas.py
integrations/: physics_lab_router.py  physics_magnitude_gold_engines.py  universal_invariant_adversarial_engines.py
notebooks/: run_a_claim.ipynb
outputs/: batch_api_report.json  capability_matrix.json  capas_claim_gate_ui.html  capas_product_demo_report.json  claim_gate_ui_browser_report.json  claim_gate_ui_report.json  conformance_result.json  customer_product_assets_report.json  external_claim_accept_decision.json  external_claim_hold_decision.json  external_claim_rewrite_decision.json  external_input_schema_report.json  external_user_validation_report.json  family_decision_mix.json  family_decision_mix.md  fresh_clone_install_report.json  github_release_plan_v0.1.0.json  github_release_plan_v0.1.1.json  pharma_corpus.json  pilot_metrics.json  profile_registration_readiness_report.json  release_notes_v0.1.0.md  release_notes_v0.1.1.md  release_readiness_report.json  standalone_pipeline_report.json
router/: __init__.py  cost_model.py  executor.py  pipeline.py  prov_export.py  ro_crate_export.py  route.py  trace.py  types.py
scripts/: build_evidence_corpus.py  check_release_readiness.py  check_reproducibility_env.py  gen_gate_contracts.py  prepare_external_reviewer_packet.py  prepare_profile_registration_packet.py  publish_github_release.py  regen_app_csp.py  run_daily_sota_update.sh  update_sota_watch.py
spaces/: README.md  app.py  requirements.txt
(+171 files in other folders)
